# alfred

./: .gitignore  Cargo.toml  README.md  alfred.yaml
.github/workflows/: cd.yaml
src/: constants.rs  main.rs
src/templates/: AbstractViewStateViewModel.mustache  AndroidPlatformViewModel.mustache  AtomicJob.mustache  Compose.mustache  IosPlatformViewModel.mustache  UiState.mustache  ViewStateViewModel.mustache
