[package]
edition = "2021"
name = "alfred"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "3.2.8", features = ["derive"]}
inquire = "0.2.1"
regex = "1.6.0"
serde = {version = "1.0.138", features = ["derive"]}
serde_yaml = "0.8.24"
serde_json = "1.0.82"
handlebars = "4.3.2"
walkdir = "2.3.2"
path-slash = "0.2.0"